# rat-zsh

./: .gitignore  .markdownlint-cli2.yaml  Cargo.toml  Makefile  README.md  install.zsh  rz
.github/: README.md
.github/workflows/: git-tag.yml  lint.yml  release.yml  test.yml
assets/: init.zsh
assets/icons/: rat-zsh.aseprite
contrib/completions/zsh/: _rz
images/logo/: rat-zsh.aseprite
rz/: Cargo.toml
rz/assets/: init.zsh
rz/src/: config.rs  init.rs  lib.rs
rz/src/git/: git2_backend.rs
rz/src/order/: fs_scan.rs
rz/src/sync/: progress.rs
rz/src/upgrade/: archive.rs  github.rs  mod.rs
src/: config.rs  init.rs  lib.rs  list.rs  main.rs  paths.rs  progress.rs
src/config/: mod.rs
src/git/: git2_backend.rs  mod.rs
src/list/: fs_scan.rs  mod.rs  order.rs
src/order/: fs_scan.rs  mod.rs
src/sync/: cleanup.rs  jobs.rs  mod.rs  resolve.rs
src/upgrade/: archive.rs  github.rs  mod.rs
