[package]
name = "rz"
version = "0.1.8"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
anyhow = "1.0"
git2 = { version = "0.20", features = ["vendored-openssl"] }
regex = "1"
rayon = "1"
num_cpus = "1"
indicatif = "0.18"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
serial_test = "3"
httpmock = "0.7"
serde_json = "1"
